switched to main ebay site

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="./index.css">
+    <link type="text/css" rel="stylesheet" href="/index.css">
   </head>
-  <body>
+  <body style="text-align:center;">
+    <h1 style="margin-top:5%;">Ebay Deal Alert</h1>
+    <h2 style="margin-bottom:5%;">Still a work in progress. Only accepts 1 word queries with prices</h2>
     <div id = "searchBox1" class = "searchBox">
       <h1>Quick Search?</h1>
       <form action="/searchResults" method="PUT">
