--- a/OLD/index.html
+++ b/OLD/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
     <title>Ebay Deal Alert</title>
   </head>
   <body style="text-align:center;">
